--- a/budget/pom.xml
+++ b/budget/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>budget</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>budget Maven Webapp</name>
+	<name>Budget</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<spring.version>4.2.5.RELEASE</spring.version>
@@ -17,8 +17,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 		</plugins>
